--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,14 @@
   "main": [
     "xp-observer.html"
   ],
+  "ignore": [
+    "**/.*",
+    "bin",
+    "index.js",
+    "lib",
+    "node_modules",
+    "package.json"
+  ],
   "dependencies": {
     "expandjs": "ExpandJS/expandjs"
   }
