--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xp-observer",
   "license": "BSD-3-Clause",
   "description": "This class is used to provide object observing functionalities.",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "homepage": "https://github.com/ExpandJS/xp-observer",
   "author": "ExpandJS <dev@expandjs.com> (http://www.expandjs.com)",
   "contributors": [
@@ -19,6 +19,7 @@
     "expandjs": "*"
   },
   "scripts": {
-    "browserify": "browserify index -i expandjs > dist/xp-observer.js"
+    "browserify": "browserify index -i expandjs > dist/xp-observer.js",
+    "browserify-min": "browserify -d index -i expandjs -p [minifyify --map xp-observer.min.map --output dist/xp-observer.min.map] > dist/xp-observer.min.js"
   }
 }
