--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "license": "BSD-3-Clause",
   "version": "0.8.9",
   "description": "This class is used to provide object observing functionalities.",
-  "homepage": "http://www.expandjs.com/classes/xp-observer",
+  "homepage": "http://expandjs.com/classes/xp-observer",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
     "Maurizio Stefàno <m.stefano@expandjs.com>",
