--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
   "scripts": {
     "browserify": "browserify index -i expandjs > dist/xp-observer.js",
     "browserify-min": "browserify -d index -i expandjs -p [minifyify --map xp-observer.min.map --output dist/xp-observer.min.map] > dist/xp-observer.min.js"
-  }
+  },
+  "keywords": [
+      "expandjs",
+      "web app",
+      "observer",
+      "object observe"
+  ]
 }
