--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "xp-load": "*"
   },
   "scripts": {
-    "build": "browserify index -i expandjs > dist/xp-observer.js --standalone XPObserver && npm run build:min",
-    "build:min": "browserify -d index -i expandjs -p [minifyify --map xp-observer.min.map --output dist/xp-observer.min.map] > dist/xp-observer.min.js --standalone XPObserver"
+    "build": "browserify index -i expandjs --standalone XPObserver > dist/xp-observer.js && npm run build:min",
+    "build:min": "browserify -d index -i expandjs --standalone XPObserver -p [minifyify --map xp-observer.min.map --output dist/xp-observer.min.map] > dist/xp-observer.min.js"
   },
   "keywords": [
       "expandjs",
