--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "xp-observer",
   "license": "BSD-3-Clause",
   "version": "0.9.6",
+  "main": "xp-observer.html",
   "description": "This class is used to provide object observing functionalities",
   "homepage": "http://expandjs.com/classes/xp-observer",
   "authors": [
@@ -15,9 +16,6 @@
     "javascript",
     "expandjs",
     "web-components"
-  ],
-  "main": [
-    "xp-observer.html"
   ],
   "ignore": [
     "**/.*"
