--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "minifyify": "*"
   },
   "scripts": {
-    "build": "browserify index -i expandjs | derequire > dist/xp-observer.js && npm run build:min",
-    "build:min": "browserify -d index -i expandjs -p [minifyify --map xp-observer.min.map --output dist/xp-observer.min.map] | derequire > dist/xp-observer.min.js"
+    "build": "npm run build:browserify && npm run build:minify && node noconflict",
+    "build:browserify": "browserify index -i expandjs --standalone XPObserver | derequire > dist/xp-observer.js",
+    "build:minify": "browserify -d index -i expandjs --standalone XPObserver -p [minifyify --map xp-observer.min.map --output dist/xp-observer.min.map] | derequire > dist/xp-observer.min.js"
   },
   "keywords": [
       "expandjs",
