--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "xp-observer",
   "license": "BSD-3-Clause",
-  "version": "0.9.11",
+  "version": "0.10.0",
   "main": "xp-observer.html",
-  "description": "This class is used to provide object observing functionalities",
+  "description": "A class used to provide object observing",
   "homepage": "http://expandjs.com/classes/xp-observer",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
@@ -15,12 +15,13 @@
     "web app",
     "javascript",
     "expandjs",
+    "custom elements",
     "web-components"
   ],
   "ignore": [
     "**/.*"
   ],
   "dependencies": {
-    "expandjs": "ExpandJS/expandjs#0.9.11"
+    "expandjs": "ExpandJS/expandjs#0.10.0"
   }
 }
